// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button disabled prop sets 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: inherit;
  font-weight: 600;
  line-height: 1.5;
  cursor: default;
  border-radius: 2px;
  border-width: 0;
  border-style: solid;
  background-color: #e8f2ff;
  color: #001833;
  font-size: 14px;
  padding: 9.5px 18px;
}

.c0:hover {
  background-color: null;
}

<button
  className="c0"
  color="primary"
  disabled={true}
/>
`;

exports[`Button renders 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: inherit;
  font-weight: 600;
  line-height: 1.5;
  cursor: pointer;
  border-radius: 2px;
  border-width: 0;
  border-style: solid;
  background-color: #007aff;
  color: #fff;
  font-size: 14px;
  padding: 9.5px 18px;
}

.c0:hover {
  background-color: #049;
  color: #fff;
}

<button
  className="c0"
  color="primary"
/>
`;

exports[`Button size large sets height and font-size 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: inherit;
  font-weight: 600;
  line-height: 1.5;
  cursor: pointer;
  border-radius: 2px;
  border-width: 0;
  border-style: solid;
  background-color: #007aff;
  color: #fff;
  font-size: 16px;
  padding: 12px 22px;
}

.c0:hover {
  background-color: #049;
  color: #fff;
}

<button
  className="c0"
  color="primary"
  size="large"
/>
`;

exports[`Button size medium sets height and font-size 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: inherit;
  font-weight: 600;
  line-height: 1.5;
  cursor: pointer;
  border-radius: 2px;
  border-width: 0;
  border-style: solid;
  background-color: #007aff;
  color: #fff;
  font-size: 14px;
  padding: 9.5px 18px;
}

.c0:hover {
  background-color: #049;
  color: #fff;
}

<button
  className="c0"
  color="primary"
  size="medium"
/>
`;

exports[`Button size small sets height and font-size 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: inherit;
  font-weight: 600;
  line-height: 1.5;
  cursor: pointer;
  border-radius: 2px;
  border-width: 0;
  border-style: solid;
  background-color: #007aff;
  color: #fff;
  font-size: 12px;
  padding: 7px 12px;
}

.c0:hover {
  background-color: #049;
  color: #fff;
}

<button
  className="c0"
  color="primary"
  size="small"
/>
`;

exports[`Button width prop sets width to 100% 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: inherit;
  font-weight: 600;
  line-height: 1.5;
  cursor: pointer;
  border-radius: 2px;
  border-width: 0;
  border-style: solid;
  background-color: #007aff;
  color: #fff;
  width: 100%;
  font-size: 14px;
  padding: 9.5px 18px;
}

.c0:hover {
  background-color: #049;
  color: #fff;
}

<button
  className="c0"
  color="primary"
  width={1}
/>
`;

exports[`Button without disabled prop sets 1`] = `
.c0 {
  -webkit-font-smoothing: antialiased;
  display: inline-block;
  vertical-align: middle;
  text-align: center;
  -webkit-text-decoration: none;
  text-decoration: none;
  font-family: inherit;
  font-weight: 600;
  line-height: 1.5;
  cursor: pointer;
  border-radius: 2px;
  border-width: 0;
  border-style: solid;
  background-color: #007aff;
  color: #fff;
  font-size: 14px;
  padding: 9.5px 18px;
}

.c0:hover {
  background-color: #049;
  color: #fff;
}

<button
  className="c0"
  color="primary"
/>
`;
